syntax = "proto3";

package proto;

option go_package = "swrc/proto/pb";

import "google/protobuf/empty.proto";

import "v1_rpc_authenticate.proto";
import "v1_rpc_register.proto";
import "v1_rpc_manage_account_role.proto";
import "v1_rpc_verify_account.proto";

service AccountService{
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateReply){}
    rpc Register(RegisterRequest) returns (RegisterReply){}
    rpc ManageAccountRole(ManageAccountRoleRequest) returns (google.protobuf.Empty){}
    rpc VerifyAccount(VerifyAccountRequest) returns (google.protobuf.Empty){}
}